--- a/src/app/customer/login/login.component.html
+++ b/src/app/customer/login/login.component.html
@@ -24,7 +24,7 @@
                     </div> <!-- card-body.// -->
                 </div> <!-- card .// -->
 
-                <p class="text-center mt-4">Bạn chưa có tài khoản? <a href="#">Đăng ký</a></p>
+                <p class="text-center mt-4">Bạn chưa có tài khoản? <a routerLink="/customer/register" >Đăng ký</a></p>
             </div>
         </div>
     </div>
