--- a/src/app/home/post/post.component.html
+++ b/src/app/home/post/post.component.html
@@ -15,12 +15,49 @@
         <!--=========================================
 =            Section Gallery two            =
 ==========================================-->
+
+
         <div class="card__image-filter">
             <div class="filterizr-control">
                 <ul class="list-inline filterizr-filter">
                     <li class="list-inline-item filtr-active btn-filter">Bài đăng mới</li>
                 </ul>
             </div>
+            <div class="mh-filters">
+                <div class="mh-filters__left">
+                    <div class="mh-filters__sort">
+                        <i aria-hidden="true" class="fa fa-sort-amount-desc"></i>
+                        Sắp xếp:
+                    </div>
+                    <div class="mh-filters__buttons">
+                        <button class="mh-filters__button mh-filters__button--active">
+                            Mới nhất
+                        </button>
+                        <button class="mh-filters__button">
+                            Phổ biến
+                        </button>
+                        <button class="mh-filters__button">
+                            Giá từ cao đến thấp
+                        </button>
+                        <button class="mh-filters__button">
+                            Giá từ thấp đến cao
+                        </button>
+                        <!---->
+                    </div>
+                </div>
+                <div class="mh-filters__right">
+                    <button class="mh-filters__right__button--active">
+                        <i class="fa fa-th"></i>
+                    </button> 
+                    <button class="">
+                        <i class="fa fa-th-large"></i>
+                    </button> 
+                    <button class="">
+                        <i class="fa fa-th-list"></i>
+                    </button>
+                </div>
+            </div>
+            
             <div class="row">
                 <div class="filtr-container"
                     style="padding: 0px; position: relative; width: 100%; display: flex; flex-wrap: wrap; height: 1068px;">
