--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -32,7 +32,7 @@
                 <!-- QUICK LINKS -->
                 <div class="col-md-4">
                     <div class="widget__footer">
-                        <h4 class="footer-title">Quick Links</h4>
+                        <h4 class="footer-title">Dịch Vụ</h4>
                         <div class="link__category-two-column">
                             <ul class="list-unstyled ">
                                 <li class="list-inline-item">
@@ -129,39 +129,17 @@
     <!-- Footer Bottom -->
     <!-- <div class="bg__footer-bottom-v1">
         <div class="container">
-            <div class="row flex-column-reverse flex-md-row">
-                <div class="col-md-6">
-                    <span>
-                        © 2020 Rethouse Real Estate - Premium real estate & theme &amp; theme by
-                        <a href="#">retenvi.com</a>
-                    </span>
-                </div>
-                <div class="col-md-6">
-                    <ul class="list-inline ">
-                        <li class="list-inline-item">
-                            <a href="#">
-                                privacy
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                contact
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                about
-                            </a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">
-                                faq
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            <iframe 
+            name="f4e73509b1483" 
+            width="1000px" 
+            height="1000px"
+             data-testid="dialog_iframe" 
+             title="" frameborder="0" 
+             allowtransparency="true" 
+             allowfullscreen="true" 
+             scrolling="no" 
+             allow="encrypted-media" src="https://www.facebook.com/v7.0/plugins/customerchat.php?app_id=&amp;attribution=setup_tool&amp;channel=https%3A%2F%2Fstaticxx.facebook.com%2Fx%2Fconnect%2Fxd_arbiter%2F%3Fversion%3D46%23cb%3Df95f7ab7e0e2c%26domain%3Dstay.vinhomes.vn%26origin%3Dhttps%253A%252F%252Fstay.vinhomes.vn%252Ff3da0212479ce38%26relation%3Dparent.parent&amp;container_width=0&amp;greeting_dialog_delay=100&amp;greeting_dialog_display=fade&amp;local_state=%7B%22v%22%3A0%2C%22path%22%3A2%2C%22chatState%22%3A1%2C%22visibility%22%3A%22hidden%22%2C%22showUpgradePrompt%22%3A%22not_shown%22%7D&amp;locale=vi_VN&amp;logged_in_greeting=Vinhomes%20Serviced%20Residences%20r%E1%BA%A5t%20vui%20l%C3%B2ng%20khi%20%C4%91%C6%B0%E1%BB%A3c%20h%E1%BB%97%20tr%E1%BB%A3%20qu%C3%BD%20kh%C3%A1ch!&amp;logged_out_greeting=Vinhomes%20Serviced%20Residences%20r%E1%BA%A5t%20vui%20l%C3%B2ng%20khi%20%C4%91%C6%B0%E1%BB%A3c%20h%E1%BB%97%20tr%E1%BB%A3%20qu%C3%BD%20kh%C3%A1ch!&amp;page_id=1450754205215897&amp;request_time=1624961886388&amp;sdk=joey&amp;theme_color=%230084ff" style="padding: 0px; position: fixed; z-index: 2147483646; border-radius: 16px; top: auto; width: 399px; background: none; bottom: 85px; max-height: calc(100% - 80px); right: 4px; margin-right: 12px; visibility: visible; min-height: 360px; height: 476px;" class="anchor_right fb_customer_chat_bounce_in_v2"></iframe>
         </div>
-    </div> -->
+    </div>  -->
     <!-- End Footer  -->
 </footer>
