--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -24,13 +24,13 @@
                     </ul>
                     <ul class="topbar-sosmed">
                         <li>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
+                            <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" ></i></a>
                         </li>
                         <li>
-                            <a href="#"><i class="fa fa-instagram"></i></a>
+                            <a href="https://www.instagram.com/" target="_blank"><i class="fa fa-instagram" ></i></a>
                         </li>
                     </ul>
                 </div>
@@ -50,8 +50,7 @@
         <div class="collapse navbar-collapse" id="main_nav99">
             <ul class="navbar-nav  mx-auto">
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" routerLink="/post/list/all" data-toggle="dropdown"> Nhà đất
-                        bán/cho thuê </a>
+                    <a class="nav-link dropdown-toggle" routerLink="/post/list/all" data-toggle="dropdown"> Danh mục </a>
                     <ul class="dropdown-menu animate fade-up">
 
                         <li><a class="dropdown-item icon-arrow" routerLink="/post/list/ban"> Nhà đất bán </a>
@@ -104,10 +103,15 @@
 
 
                 <li class="nav-item">
-                    <a class="nav-link " routerLink="/"> Giới thiệu </a>
+                    <a class="nav-link " routerLink="/"> Phong Thủy </a>
                 </li>
+                
 
-                <li class="nav-item"><a class="nav-link" routerLink="/"> Tin tức </a></li>
+                <li class="nav-item"><a class="nav-link" routerLink="/home/new"> Tin tức </a></li>
+
+                <li class="nav-item">
+                    <a class="nav-link " routerLink="/"> Liên Hệ </a>
+                </li>
             </ul>
 
 
