--- a/src/app/home/slide/slide.component.html
+++ b/src/app/home/slide/slide.component.html
@@ -8,16 +8,22 @@
             </ol>
             <div class="carousel-inner">
                 <div class="carousel-item active banner-max-height">
-                    <img class="d-block w-100" src="../../../assets/img/slider8.jpg" alt="First slide">
+                    <img class="d-block w-100" src="../../../assets/img/slider1.jpg" alt="First slide">
                     <div class="carousel-caption banner__slide-overlay d-flex h-100">
                         <div class="carousel__content">
                             <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-8 col-md-12 col-sm-12 text-center">
-                                        <div class="slider__content-title ">
-                                            <h2 data-animation="fadeInDown" data-delay=".2s" data-duration="1000ms"
-                                                class="text-white animated fadeInDown">
-                                                Giữa bộn bề cuộc sống cát trắng và biển xanh</h2>
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading">Giữa bộn bề cuộc sống cát trắng và biển xanh</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -26,16 +32,22 @@
                     </div>
                 </div>
                 <div class="carousel-item  banner-max-height">
-                    <img class="d-block w-100" src="../../../assets/img/slide1.jpg" alt="First slide">
+                    <img class="d-block w-100" src="../../../assets/img/slider2.jpg" alt="First slide">
                     <div class="carousel-caption banner__slide-overlay d-flex h-100">
                         <div class="carousel__content">
                             <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-8 col-md-12 col-sm-12 text-center">
-                                        <div class="slider__content-title ">
-                                            <h2 data-animation="fadeInDown" data-delay=".2s" data-duration="1000ms"
-                                                class="text-white animated fadeInDown">
-                                                Thành phố xanh tươi  Cuộc đời trọn vẹn</h2>
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Thành phố xanh tươi  Cuộc đời trọn vẹn</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -44,35 +56,47 @@
                     </div>
                 </div>
                 <div class="carousel-item banner-max-height">
-                    <img class="d-block w-100" src="../../../assets/img/slider4.jpg" alt="Second slide">
+                    <img class="d-block w-100" src="../../../assets/img/slider3.jpg" alt="Second slide">
                     <div class="carousel-caption banner__slide-overlay d-flex h-100">
                         <div class="carousel__content">
                             <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-8 col-md-12 col-sm-12 text-center">
-                                        <div class="slider__content-title ">
-                                            <h2 data-animation="animated fadeInDown"
-                                                class="text-white animated fadeInDown">
-                                                Tòa Teckno Park<br> Tiên phong trong sự nghiệp phát triển đô thị</h2>
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Tòa Teckno Park Tiên phong trong sự nghiệp phát triển đô thị</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item banner-max-height">
-                    <img class="d-block w-100" src="../../../assets/img/silde3.jpg" alt="Third slide">
-                    <div class="carousel-caption banner__slide-overlay d-flex h-100">
-                        <div class="carousel__content">
-                            <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-8 col-md-12 col-sm-12 text-center">
-                                        <div class="slider__content-title ">
-                                            <h2 data-animation="animated fadeInDown"
-                                                class="text-white animated fadeInDown">
-                                                Nhà đẹp của bạn <br> Thành công của chúng tôi</h2>
 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item banner-max-height">
+                    <img class="d-block w-100" src="../../../assets/img/slider4.jpg" alt="Third slide">
+                    <div class="carousel-caption banner__slide-overlay d-flex h-100">
+                        <div class="carousel__content">
+                            <div class="container">
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Tòa Teckno Park Tiên phong trong sự nghiệp phát triển đô thị</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -85,13 +109,18 @@
                     <div class="carousel-caption banner__slide-overlay d-flex h-100">
                         <div class="carousel__content">
                             <div class="container">
-                                <div class="row justify-content-center">
-                                    <div class="col-lg-8 col-md-12 col-sm-12 text-center">
-                                        <div class="slider__content-title ">
-                                            <h3 data-animation="animated fadeInDown"
-                                                class="text-white animated fadeInDown">
-                                                Nhà đẹp của bạn <br> Thành công của chúng tôi</h3>
-
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Thành phố xanh tươi  Cuộc đời trọn vẹn</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -99,19 +128,62 @@
                         </div>
                     </div>
                 </div>
+                <div class="carousel-item banner-max-height">
+                    <img class="d-block w-100" src="../../../assets/img/slider7.jpg" alt="Third slide">
+                    <div class="carousel-caption banner__slide-overlay d-flex h-100">
+                        <div class="carousel__content">
+                            <div class="container">
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Nhà đẹp của bạn Thành công của chúng tôi</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item banner-max-height">
+                    <img class="d-block w-100" src="../../../assets/img/slider8.jpg" alt="Third slide">
+                    <div class="carousel-caption banner__slide-overlay d-flex h-100">
+                        <div class="carousel__content">
+                            <div class="container">
+                                <div class="caption-text">
+                                    <div class="mh-slider__card-default">
+                                        <h3 class="mh-slider__card-default__heading"> Nhà đẹp của bạn Thành công của chúng tôi</h3>
+                                        <div class="position-relative">
+                                            <a class="mh-slider__card-default__address" href="/!">
+                                                <marquee  width="445px" direction="right">
+                                                    <span>VINHOMES OCEAN PARK</span>
+                                                </marquee>
+                                            </a>
+                                            <div class="mh-slider__card-default__price">
+                                                <div>SỰ THỊNH VƯỢNG</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div> 
             </div>
-
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <!-- <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span> -->
             <span class="carousel-control-nav-prev">
                 <i class="fa fa-2x fa-angle-left"></i>
             </span>
         </a>
         <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <!-- <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span> -->
             <span class="carousel-control-nav-next">
                 <i class="fa fa-2x fa-angle-right"></i>
             </span>
