Cài EditorCK và thư viện quill Ngày 1/7/2021

--- a/src/app/customer/add-post/add-post.component.html
+++ b/src/app/customer/add-post/add-post.component.html
@@ -125,14 +125,17 @@
     <div class="rowContent">
         <div class="postrow" style="margin-left: 30px;margin-top: 10px; padding-bottom: 15px;">
             <p>(<span>*</span>)<span style="font-size: 13px;">Tối đa chỉ 3000 ký tự</span></p>
-            <textarea style="width: 450px; height: 150px; float: left; font-size: 13px;" maxlength="3000" pInputTextarea [(ngModel)]="mota"></textarea>
-            <div style="float: left; font-size: 13px; padding-left: 5px; text-align: justify; width: 220px;">
+            <textarea style="width: 500px; height: 150px; float: left; font-size: 13px;" maxlength="3000" pInputTextarea [(ngModel)]="mota">
+            </textarea>
+            <!-- <p-editor  [(ngModel)]="mota" [style]="{'height':'320px'}"></p-editor> -->
+
+            <!-- <div style="float: left; font-size: 13px; padding-left: 5px; text-align: justify; width: 220px;">
                 <div class="text">
                 <img src="https://file4.batdongsan.com.vn/images/Home/images/arrow.png" alt="">
                 Giới thiệu chung về bất động sản của bạn. Ví dụ: Khu nhà có vị trí thuận lợi: Gần công viên, gần trường học ... Tổng diện tích 52m2, đường đi ô tô vào tận cửa.
                 <span style="color: #f00;">Lưu ý: tin rao chỉ để mệnh giá tiền Việt Nam Đồng.</span>
                 </div>
-                </div>
+                </div> -->
         </div>
     </div>
     <div class="rowHeader">
